<resources>
    <string name="app_name">LeukemiaApp</string>
    <string name="main_medication_text">Medication</string>
    <string name="main_hydration_text">Hydration</string>
    <string name="main_title_text">Leukemia Organization Application</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_main2">Main2Activity</string>
    <string name="medication_add_title">Add a Medication</string>
    <string name="medication_view_dose_hint">Milligrams</string>
    <string name="medication_view_dose_text">Dosage:</string>
    <string name="medication_add_freq_text">Frequency:</string>
    <string name="medication_add_freq_hint">Times per day</string>
    <string name="menu_managedatabase">Manage Database</string>


    <string name="pref_key_med_delete">med_delete</string>
    <string name="pref_key_med_update">med_update</string>
    <string name="pref_key_water_delete">water_delete</string>
    <string name="pref_key_water_update">water_update</string>
    <string name="pref_water_update_summary">Which value would you like to edit?</string>
    <string name="pref_med_update_name">Name</string>
    <string name="pref_med_update_dose">Dose</string>
    <string name="pref_med_update_freq">Freq</string>
    <string name="pref_med_update_textview">Type in the new value here</string>
    <string name="menu_generate_water_data">Generate water data</string>
    <string name="hydration_pickday_text">Pick a day:</string>
    <string name="hydration_intake_text">Intake:</string>
    <string name="hydration_excrete_text">Excrete:</string>
    <string name="hydration_dif_text">Difference:</string>
    <string name="hydration_empty_text">EMPTY</string>
</resources>
