<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:orientation="vertical">

    <TextView android:layout_width="fill_parent" android:layout_height="wrap_content"
        android:text="@string/pref_water_update_summary"
        android:gravity="center"
        android:textColor="#000000"/>

    <LinearLayout android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">
        <Button android:layout_width="fill_parent" android:layout_height="fill_parent"
                android:id="@+id/updateName_button"
                android:text="@string/pref_med_update_name"
                android:layout_weight="0.5"
                android:background="#ffffff"
                android:textColor="@color/colorPrimary"
                android:onClick="onMedUpdateName"
            />

        <Button android:layout_width="fill_parent" android:layout_height="fill_parent"
                android:id="@+id/updateDose_button"
                android:text="@string/pref_med_update_dose"
                android:layout_weight="0.5"
                android:background="#ffffff"
                android:textColor="@color/colorPrimary"
            />

        <Button android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:id="@+id/updateFreq_button"
                android:text="@string/pref_med_update_freq"
                android:layout_gravity="center"
                android:background="#ffffff"
                android:textColor="@color/colorPrimary"
            />

    </LinearLayout>


</LinearLayout>