<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="com.alexhart.leukemiaapp.MedicationsFragAdd">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/medication_add_title"
        android:layout_marginTop="30dp"
        android:textSize="30sp"
        android:textColor="@color/colorPrimary"
        android:gravity="center|top"/>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical"
                  android:layout_gravity="center">

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:id="@+id/text_medication_name"
                android:text="Name:"
                android:textSize="20sp"
                android:layout_weight="0.1"
                />

            <EditText
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:layout_weight="0.46"
                android:textSize="20sp"
                />

        </LinearLayout>

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:id="@+id/text_medication_dose"
                android:textSize="20sp"
                android:text="@string/medication_view_dose_text"
                android:layout_weight="0.1"
                />

            <EditText
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:hint="@string/medication_view_dose_hint"
                android:textSize="20sp"
                android:layout_weight="0.40"
                />

        </LinearLayout>

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:id="@+id/text_medication_freq"
                android:text="@string/medication_add_freq_text"
                android:textSize="20sp"
                android:layout_weight="0.1"
                />

            <EditText
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:hint="@string/medication_add_freq_hint"
                android:textSize="20sp"
                android:layout_weight="0.9"
                />

        </LinearLayout>
    </LinearLayout>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:src="@android:drawable/ic_input_add"
        android:tint="#ffffff"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|start"
        android:layout_margin="@dimen/fab_margin"
        android:src="@android:drawable/ic_input_delete"
        android:tint="#ffffff"/>

</FrameLayout>
